🐞 fix: scrollbar 组件滚动条默认样式

--- a/src/scrollbar/src/styles/index.css
+++ b/src/scrollbar/src/styles/index.css
@@ -1,7 +1,7 @@
 .jo-scrollbar {
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
 }
 .jo-scrollbar::-webkit-scrollbar {
   /*滚动条整体样式*/
